# play-football-match-highlights

./: .buildinfo  01_about.html  02_source.html  03_authors.html  04_contributing.html  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: release.yml  test.yml
docs/source/: 03_authors.rst  conf.py  index.rst
play_football_match_highlights/: main.py
tests/: test_version.py
