[tool.poetry]
name = 'play_football_match_highlights'
version = "0.1.0"
description = "Play football match highlights without ads."
authors = ["Zhiwei Zhang <zhiwei2017@gmail.com>"]
readme = "README.rst"
license = "MIT"
repository = "https://github.com/zhiwei2017/play-football-match-highlights"
documentation = "https://github.com/zhiwei2017/play-football-match-highlights"
keywords = []
classifiers = []
packages = [
  {include = "play_football_match_highlights"}
]

include = []

[tool.poetry.dependencies]
python = "^3.8.1"
click = "^8.1.7"
requests-html = "^0.10.0"
lxml-html-clean = "^0.3.1"

[tool.poetry.group.dev.dependencies]
bandit = "~1.7"
flake8 = "~6.1"
mypy = "~1.6"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "~7.4"
pytest-cov = "~4.1"
pytest-runner = "~6.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "~7.1"
sphinx_rtd_theme = "~1.3"

[tool.poetry.scripts]
play_match_highlights = 'play_football_match_highlights.main:play_match_highlights'

[build-system]
requires = ["poetry"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = "--verbose --doctest-modules --cov-report term-missing --cov=./play_football_match_highlights"